Add file type restriction to `.pdf` in Token Calculator file upload

--- a/web/src/app/token-calculator/token-calculator.html
+++ b/web/src/app/token-calculator/token-calculator.html
@@ -1,5 +1,6 @@
 <div>
   <p-fileupload mode="basic" name="file" chooseIcon="pi pi-upload"
+                accept=".pdf"
                 auto="true"
                 customUpload="true"
                 (uploadHandler)="uploadFile($event)"
